--- a/src/main/resources/templates/basic/editPost.html
+++ b/src/main/resources/templates/basic/editPost.html
@@ -58,15 +58,10 @@
 <div class="mypost">
     <div class="form-floating mb-3">
 
-        <form action="post.html" th:action th:object="${post}" method="post">
+        <form action="detailPost.html" th:action th:object="${post}" method="post">
             <div>
-                <label for="id">포스트 NO.</label>
-                <input type="text" id="id" class="form-control" th:field="*{id}" readonly>
-            </div>
-            <p>
-            <div>
-                <label for="username">작성자</label>
-                <input type="text" id="username" class="form-control" required="required" th:field="*{username}">
+                <label for="author">작성자</label>
+                <input type="text" id="author" class="form-control" required="required" th:field="*{author}">
             </div>
             <p>
             <div>
@@ -75,8 +70,8 @@
             </div>
             <p>
             <div>
-                <label for="contents">내용</label>
-                <textarea type="text" id="contents" class="form-control" required="required" maxlength="150" th:text="*{contents}" th:field="*{contents}"></textarea>
+                <label for="content">내용</label>
+                <textarea type="text" id="content" class="form-control" required="required" maxlength="150" th:text="*{content}" th:field="*{content}"></textarea>
             </div>
             <hr class="my-4">
             <div class="row">
@@ -85,8 +80,8 @@
                 </div>
                 <div class="col">
                     <button class="w-100 btn btn-outline-secondary btn-lg"
-                            onclick="location.href='post.html'"
-                            th:onclick="|location.href='@{/basic/posts/{postId}(postId=${post.id})}'|"
+                            onclick="location.href='detailPost.html'"
+                            th:onclick="|location.href='@{/basic/posts/{id}(id=${post.id})}'|"
                             type="button">취소</button>
                 </div>
             </div>
